(fix) messages json structure

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,3 +1,6 @@
 {
-    "welcome": "Welcome"
+    "welcome": {
+        "message": "Welcome world",
+        "description": "Welcoming Message"
+    }
 }
